OOUVE_Infra/SecurityGroup.yml
---
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
AWSTemplateFormatVersion: "2010-09-09"

Description: 'AWS Cloudformation template for Security group configuration'

Metadata:
  License: Apache-2.0

Parameters:
  EnvironmentName:
    Description: An Environment name that will prefix the resources
    Type: String

  MyVPC:
    Description: VPC to Operate in
    Type: AWS::EC2::VPC::Id

  MySecurityGroupName:
    Description: Security Group Name
    Type: String

  SecurityGroupCIDR:
    Description: The IP address range that can be used to SSH to the EC2 instances
    Type: String
    MinLength: 9
    MaxLength: 18
    Default: 0.0.0.0/0
    AllowedPattern: (\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.

#Mappings:

#Conditions:

Resources:
  MySecurityGroup:
    # http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-security-group.html
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH access
      GroupName: !Ref MySecurityGroupName
      VpcId: !Ref MyVPC
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: !Ref 'SecurityGroupCIDR'
      - IpProtocol: tcp
        FromPort: 3389
        ToPort: 3389
        CidrIp: !Ref 'SecurityGroupCIDR'
      - IpProtocol: icmp
        FromPort: -1
        ToPort: -1
        CidrIp: !Ref 'SecurityGroupCIDR'
      Tags:
        - Key: Name
          Value: !Ref EnvironmentName
Outputs:
  StackSecurityGroup:
    Description: The Security Group
    Value: !Ref MySecurityGroup
    Export:
      Name: !Sub "${EnvironmentName}-MySecurityGroup"
